modify some error